--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
 			<p align="right"> <font color="orange" size="5" face="Verdana"> :| niezdecydowanie, brak emocji</font> </p> <br>
 			<p align="right"> <font color="green" size="6" face="Courier New"> :) uśmiech</font> </p> <br>
 			<p align="right"> <font color="pink" size="7" face="Times New Roman"> ;) uśmiech z przymrużeniem oka</font> </p> <br>
+
+			<p align="left"> <font size="3" face="Times New Roman"> <b>Adres:80-188,</b> <i>Gdańsk</i> <u>Jana z Kolana,</u> <strike>101/34</strike> </font> </p> <br>
+		    <p align="right"> <font color="yellow" size="7" face="Verdana">Ulubiony aktor: Cezariusz Pazur.</font> </p> <br>
+		    <p align="right"> <font color="grey" size="5" face="Verdana">Ulubiony zespół muzyczny:<font color="red">Gorillaz</font>.</font> </p> <br>
+		    <p align="right"> <font color="green" size="3" face="Verdana">Data urodzenia: 28 napewno_nie_listopada 2001.</font> </p> <br>
+
+            <p align="left"> <font size="5" face="Verdana">H<sub>2</sub>SO<sub>4</sub></font> </p> <br>
+            <p align="left"> <font size="4" face="Verdana">x*x=x<sup>2</sup></font> </p> <br>
     </body> 
+
    </html> 
