--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
     <html lang="pl-PL"> 
     <html> 
      	      <head> 
-             	    <meta charset="utf-8"> 
+             	    <meta charset="utf-8">
+		    <meta http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-2" />  
              	    <title>Artem Korotkov</title> 
      	      </head> 
-    	      <body> 
+    	      <body   bgcolor="silver"> 
  	        Artem Korotkov
  			<p align="right"> <font color="green" size="1" face="Arial"> Artem </font> </p> <br>
 			<p align="right"> <font color="green" size="2" face="Arial"> Artem </font> </p> <br>
@@ -26,6 +27,63 @@
 			<p align="right"> <font color="orange" size="5" face="Verdana"> :| niezdecydowanie, brak emocji</font> </p> <br>
 			<p align="right"> <font color="green" size="6" face="Courier New"> :) uśmiech</font> </p> <br>
 			<p align="right"> <font color="pink" size="7" face="Times New Roman"> ;) uśmiech z przymrużeniem oka</font> </p> <br>
+
+			<p align="left"> <font size="3" face="Times New Roman"> <b>Adres:80-188,</b> <i>Gdańsk</i> <u>Jana z Kolana,</u> <strike>101/34</strike> </font> </p> <br>
+		        <p align="right"> <font color="yellow" size="7" face="Verdana">Ulubiony aktor: Cezariusz Pazur.</font> </p> <br>
+		        <p align="right"> <font color="grey" size="5" face="Verdana">Ulubiony zespół muzyczny:<font color="red">Gorillaz</font>.</font> </p> <br>
+		        <p align="right"> <font color="green" size="3" face="Verdana">Data urodzenia: 28 napewno_nie_listopada 2001.</font> </p> <br>
+			<p align="left"> <font size="5" face="Verdana">H<sub>2</sub>SO<sub>4</sub></font> </p> <br>
+                    	<p align="left"> <font size="4" face="Verdana">x*x=x<sup>2</sup></font> </p> <br>
+
+			<h1 ALIGN=right >Żart o lekarzu</h1> <!- Artem Korotkov 1P->
+			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+			 <fieldset>
+				<legend>Dentysta sadysta</legend> 
+				 -Panie doktorze czy ma pan coś na moje zęby?   <br /> 
+				 -Tak, woreczek...                    
+			 </fieldset> 
+			<h2 ALIGN=right >Żart o informatyku</h2>
+			 <HR SIZE=6 WIDTH=40% ALIGN=CENTER NOSHADE COLOR=black>
+			 <fieldset> 
+				<legend>Przyszły informatyk</legend> 
+				 Dzieci piszą wypracowanie o tym, jak wyobażają sobie pracę informatyka.<br /> 
+				 Dlaczego tylko Karol. <br/>
+				 -Dlaczego nie piszesz? -pyta nauczycielka.<br/>
+				 -Czekam, aż mi się otworzy edytor tekstu.                     
+			 </fieldset>
+			<h3 ALIGN=right >Żart o więzieniu</h1>
+			 <fieldset> 
+				<legend>Więzień mówi do strażnika:</legend> 
+				 - Niech pan będzie dla mnie uprzejmy! <br /> 
+				 Gdyby tu nie było takich jak ja, byłby pan bezrobotnym!
+           		 </fieldset>
+			 <HR SIZE=10 WIDTH=30% ALIGN=RIGHT COLOR=green >
+			 <h4>nazwisko ucnia&nbsp;&nbsp;&nbsp;imię ucznia</h4>
+			 <p>Korotkov&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Artem</p>
+			 <p>&#38; &#161; &#162; &#163; &#164; &#165; &#167;</p>
+
+			 <br><br><br>
+			 <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
+                         <h1> Ty zaproponuj swoje, związane z informatyką</h1>
+			 <p>Możliwości formatowania tekstu w HTML.</p>
+			 <ul type=disc>
+				<li><b>Pogrubienie:</b><&nbsp;b&nbsp;><&nbsp;/b&nbsp;>
+				<li><i>Kursywna:</i>
+				<li><u>Podkreślenie:</u>
+			 </ul>
+			 <ul type=circle>
+				<li><strike>Przekreślelie:</strike>
+				<li>Indeks<sup>górny:</sup>
+				<li>Indeks<sub>dolny:</sub>
+			 </ul>
+			 <ul type=square>
+				<li><b>Pogrubienie:</b>
+				<li><i>Kursywna:</i>
+				<li><u>Podkreślenie:</u>
+			 </ul> 
+
+
+
     </body> 
 
    </html> 
