--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                          <h1> Ty zaproponuj swoje, związane z informatyką</h1>
 			 <p>Możliwości formatowania tekstu w HTML.</p>
 			 <ul type=disc>
-				<li><b>Pogrubienie:</b><&nbsp;b&nbsp;><&nbsp;/b&nbsp;>
-				<li><i>Kursywna:</i>
-				<li><u>Podkreślenie:</u>
+				<li><b>Pogrubienie:</b>< b > < / b >
+				<li><i>Kursywna:</i>< i > < / i >
+				<li><u>Podkreślenie:</u>< u > < / u >
 			 </ul>
 			 <ul type=circle>
-				<li><strike>Przekreślelie:</strike>
-				<li>Indeks<sup>górny:</sup>
-				<li>Indeks<sub>dolny:</sub>
+				<li><strike>Przekreślelie:</strike>< strike > < / strike >
+				<li>Indeks<sup>górny:</sup>< sup > < / sup >
+				<li>Indeks<sub>dolny:</sub>< sub > < / sub >
 			 </ul>
 			 <ul type=square>
-				<li><b>Pogrubienie:</b>
+				<li>Przejście do nowego wiersza w tekscie:< br >
 				<li><i>Kursywna:</i>
 				<li><u>Podkreślenie:</u>
 			 </ul> 
