--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 			<p align="left"> <font size="5" face="Verdana">H<sub>2</sub>SO<sub>4</sub></font> </p> <br>
                     	<p align="left"> <font size="4" face="Verdana">x*x=x<sup>2</sup></font> </p> <br>
 
-			<h1 ALIGN=right >Żart o lekarzu</h1> <!- Artem Korotkov 1P->
+			<h1 ALIGN=left >Żart o lekarzu</h1> <!- Artem Korotkov 1P->
 			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
 			 <fieldset>
 				<legend>Dentysta sadysta</legend> 
 				 -Panie doktorze czy ma pan coś na moje zęby?   <br /> 
 				 -Tak, woreczek...                    
 			 </fieldset> 
-			<h2 ALIGN=right >Żart o informatyku</h2>
+			<h2 ALIGN=center>Żart o informatyku</h2>
 			 <HR SIZE=6 WIDTH=40% ALIGN=CENTER NOSHADE COLOR=black>
 			 <fieldset> 
 				<legend>Przyszły informatyk</legend> 
@@ -62,27 +62,107 @@
 			 <p>Korotkov&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Artem</p>
 			 <p>&#38; &#161; &#162; &#163; &#164; &#165; &#167;</p>
 
-			 <br><br><br>
-			 <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
-                         <h1> Ty zaproponuj swoje, związane z informatyką</h1>
-			 <p>Możliwości formatowania tekstu w HTML.</p>
-			 <ul type=disc>
+
+			<br><br><br>
+			<h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
+            <h1> Ty zaproponuj swoje, związane z informatyką</h1>
+			<p style="color: blue;">Możliwości formatowania tekstu w HTML.</p>
+			<ul type=disc style="color: blue;">
 				<li><b>Pogrubienie:</b>< b > < / b >
 				<li><i>Kursywna:</i>< i > < / i >
 				<li><u>Podkreślenie:</u>< u > < / u >
-			 </ul>
-			 <ul type=circle>
+			</ul>
+			<ul type=circle style="color: blue;">
 				<li><strike>Przekreślelie:</strike>< strike > < / strike >
 				<li>Indeks<sup>górny:</sup>< sup > < / sup >
 				<li>Indeks<sub>dolny:</sub>< sub > < / sub >
-			 </ul>
-			 <ul type=square>
-				<li>Przejście do nowego wiersza w tekscie:< br >
-				<li><i>Kursywna:</i>
-				<li><u>Podkreślenie:</u>
-			 </ul> 
+			</ul>
+			<ul type=square style="color: blue;">
+				<li>Przejście do nowego wiersza w tekscie: < br >
+				<li>Zapobieganie automatycznemu przenoszeniu fragmentu tekstu do nowego wiersza: < nobr > < / nobr >
+				<li>Spacja niełamliwa: & nbsp
+			</ul>
 
+			<br><br><br> 
+			<h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
+			<h2> Ty zaproponuj swoje, związane z informatyką</h2>
+			<p style="color: red;">Nagłówki w treści strony WWW.</p>
+			<ol type="1" start="2" style="color: red;">
+				<li>< H1 > Będzie największym nagłówkiem.
+				<li>< H2 >...< H5 > Będzie coraz mniejsze.
+				<li>< H6 > Będzie największym nagłówkiem		
+			</ol>
+			<p style="color: red;">Możliwości funkcj font.</p>
+			<ol type="a" start="2" style="color: red;">
+				<li>< font size ="wielkość czcionki" >
+				<li>< font color ="kolor czcionki" >
+				<li>< font face ="rodzaj czcionki" >
+			</ol>
+			<p style="color: red;">3 Najprostsze rodzaje kolorów do użycia w funkcji font.</p>
+			<ol type="I" start="2" style="color: red;">
+				<li>Nazwą: red-czerwony, green-zielony, blue-niebieski
+				<li>RGB: rgb(255,0,0)-czerwony, rgb(0,255,0)-zielony, rgb(0,0,255)-niebieski
+				<li>Hexadecymalny, <font style="color: black;">#</font><font style="color: red;">RR</font><font style="color: green;">GG</font><font style="color: blue;">BB</font>: #FF0000-czerwony, #00FF00-zielony, #0000FF-niebieski.
+			</ol>
 
+			<br><br><br> 
+			<h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi  rodzajami numerowania/wyliczenia</h3> 
+			<h3> Ty zaproponuj swoje, związane z informatyką</h3>
+			<ol type="1" start="2" style="color: aqua;">
+    		<li>Popularne interfejsy urządzeń peryferyjnych do komputera:</li>
+
+    		<ol type="A" start="2" style="color: aqua;">
+      		<li>Interfejsy na przesył obrazu</li>
+
+      		<ol type="i" start="2" style="color: aqua;">
+        		<li>HDMI</li>
+        		<ul type="square">
+    		<li>Type A – Standard</li>
+    		<li>Type B – Dual-Link</li>
+    		<li>Type C – Mini</li>
+    		<li>Type D – Micro</li>
+    		<li>Type E – Zawiera blokującą ochronę aby kabel Typu Standard się nie ruszał</li>
+        		</ul>
+
+        		<li>DVI</li>
+        		<ul type="square">
+          		<li>DVI-I – Przesyła dane cyfrowe i analogowe</li>
+          		<li>DVI-D – Przesyła dane cyfrowe</li>
+          		<li>DVI-A – Przesyła dane analogowe</li>
+        		</ul>
+
+        		<li>D-SUB</li>
+        		<ul type="square">
+          		<li>DE-9 – Standard</li>
+          		<li>DE-9M – Standard bez śrub mocujących</li>
+          		<li>DA-15 – Złącze GamePort</li>
+          		<li>DE-15F – Złącze VGA, SVGA i XGA</li>
+        		</ul>
+      		</ol>
+
+      		<li>Interfejsy na przesył audio</li>
+      		<ol type="i" start="2" style="color: aqua;">
+        		<li>Jack</li>
+        		<ul type="circle">
+          		<li>Jack 6,3mm</li>
+          		<li>Jack 3,5mm (minijack)</li>
+          		<li>Jack 2,5mm (microjack)</li>
+        		</ul>
+      		</ol>
+
+      		<li>Interfejsy na przesył danych</li>
+      		<ol type="i" start="2" style="color: aqua;">
+        		<li>USB</li>
+        		<ul type="square">
+          		<li>Type A (USB 1.0 & 2.0)</li>
+          		<li>Type B (USB 1.0 & 2.0)</li>
+          		<li>Mini A (USB 2.0)</li>
+          		<li>Mini B (USB 2.0)</li>
+          		<li>Mini AB (USB 2.0)</li>
+        		</ul>
+      		</ol>
+    		</ol>
+  			</ol> 
 
     </body> 
 
