--- a/index.html
+++ b/index.html
@@ -163,7 +163,19 @@
       		</ol>
     		</ol>
   			</ol> 
+			
 
+			<img src="jojo.gif" align=right border="38" width="128" height="113" alt="grafika1-korotkov">
+			<br>
+			<img src="jojo.gif" align=left border="21" width="111" height="108" alt="grafika1-korotkov">
+			<br>
+			<img src="jojo.gif" align=right border="23" width="113" height="128" alt="grafika1-korotkov">
+			<br>
+			<img src="jojo.gif" align=left border="18" width="108" height="111" alt="grafika1-korotkov">
+			<br>
+			<img src="jojo.gif" align="RIGHT" border="18" width="108" height="108" alt="grafika1-korotkov">
+			
+			
     </body> 
 
    </html> 
