--- a/cw-html-00-1P.html
+++ b/cw-html-00-1P.html
@@ -6,6 +6,7 @@
   <meta name="Author" content="Artem Korotkov,Nazar Lishka">
  </head>
   <body>
-   <h1>To nie jest dokument tekstowy</h1> 
+   <h1 class="h1">To nie jest dokument tekstowy</h1> 
   </body>
+
 </html>
