--- a/cw-html-00-1P.html
+++ b/cw-html-00-1P.html
@@ -4,9 +4,11 @@
   <meta name ="Description" content="dokument tekstowy">
   <meta name="Keywords" content="dokument">
   <meta name="Author" content="Artem Korotkov,Nazar Lishka">
+  <link rel="stylesheet" type="text/css" href="style.css">
  </head>
   <body>
    <h1 class="h1">To nie jest dokument tekstowy</h1> 
   </body>
 
 </html>
+
