--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 		    <meta http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-2" />  
              	    <title>Artem Korotkov</title> 
      	      </head> 
-    	      <body   bgcolor="silver"> 
+    	      <body   bgcolor="silver">
+				
+			<a id="poczatek" href="poczta_korotkov.html">Link do poczty</a><br>
+			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
+			<a href="#srodek">Link środka tekstu</a><br>
+			<a href="#koniec">Link do końca tekstu</a><br>
+			<a href="tabela_korotkov.html">Link do strony zawierającej tabelę</a><br>
+			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a><br>
+
+			<br>
  	        Artem Korotkov
  			<p align="right"> <font color="green" size="1" face="Arial"> Artem </font> </p> <br>
 			<p align="right"> <font color="green" size="2" face="Arial"> Artem </font> </p> <br>
@@ -34,6 +43,14 @@
 		        <p align="right"> <font color="green" size="3" face="Verdana">Data urodzenia: 28 napewno_nie_listopada 2001.</font> </p> <br>
 			<p align="left"> <font size="5" face="Verdana">H<sub>2</sub>SO<sub>4</sub></font> </p> <br>
                     	<p align="left"> <font size="4" face="Verdana">x*x=x<sup>2</sup></font> </p> <br>
+
+			<a id="srodek" href="poczta_korotkov.html">Link do poczty</a><br>
+			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
+			<a href="#poczatek">Link początek tekstu</a><br>
+			<a href="#koniec">Link do końca tekstu</a><br>
+			<a href="tabela_korotkov.html">Link do strony zawierającej tabelę</a><br>
+			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a>
+			<br>			
 
 			<h1 ALIGN=left >Żart o lekarzu</h1> <!- Artem Korotkov 1P->
 			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
@@ -166,15 +183,17 @@
 			
 
 			<img src="jojo.gif" align=right border="38" width="128" height="113" alt="grafika1-korotkov">
-			<br>
 			<img src="jojo.gif" align=left border="21" width="111" height="108" alt="grafika1-korotkov">
-			<br>
 			<img src="jojo.gif" align=right border="23" width="113" height="128" alt="grafika1-korotkov">
-			<br>
 			<img src="jojo.gif" align=left border="18" width="108" height="111" alt="grafika1-korotkov">
-			<br>
-			<img src="jojo.gif" align="RIGHT" border="18" width="108" height="108" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=right border="18" width="108" height="108" alt="grafika1-korotkov">
 			
+			<a id="koniec" href="poczta_korotkov.html">Link do poczty</a><br>
+			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
+			<a href="#poczatek">Link początek tekstu</a><br>
+			<a href="#srodek">Link do środka tekstu</a><br>
+			<a href="tabela_korotkov.html">Link do strony zawierającej tabelę</a><br>
+			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a><br>
 			
     </body> 
 
