--- a/poczta_korotkov.html
+++ b/poczta_korotkov.html
@@ -8,5 +8,7 @@
     <body> 
  	Tutaj będzie poczta
 	<A href ="mailto:atem.korotkov@ids.gda.pl"> <img src="poczta.gif" border=0 width=70 height=50> poczta do Twojego nauczyciela</A>
+        <br>
+        <A HREF="index.html"> Tutaj jest link do strony głównej </A>
     </body> 
   </html> 
