--- a/tabela_korotkov.html
+++ b/tabela_korotkov.html
@@ -7,6 +7,8 @@
      </head> 
     <body> 
  	Tutaj będzie tabela
-	<A HREF="index.html"> Tutaj jest link do przykładu3 </A>
+        <br>
+	<A HREF="index.html"> Tutaj jest link do strony głównej </A>
+
     </body> 
   </html> 
