--- a/plik_korotkov.html
+++ b/plik_korotkov.html
@@ -7,6 +7,8 @@
      </head> 
     <body> 
  	Tutaj będzie tabela
-	<A href ="INST_HTM_technik_2024.pdf">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A>
+	<A href ="INST_HTM_technik_2024.pdf">link aby ściągnąć plik</A>
+        <br>
+        <A HREF="index.html"> Tutaj jest link do strony głównej </A>
     </body> 
   </html> 
