--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			<a href="tabela_korotkov.html">Link do strony zawierającej tabelę</a><br>
 			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a><br>
 
+			Proces walidacji strony internetowej to systematyczne sprawdzanie zgodności kodu HTML, CSS i innych elementów witryny z obowiązującymi standardami. <br>
+			Walidator – program sprawdzający poprawność dokumentu o określonej składni.
 			<br>
  	        Artem Korotkov
  			<p align="right"> <font color="green" size="1" face="Arial"> Artem </font> </p> <br>
