--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
 			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
 			 <fieldset>
 				<legend>Dentysta sadysta</legend> 
-				 -Panie doktorze czy ma pan coś na moje zęby?   <br /> 
+				 -Panie doktorze czy ma pan coś na moje zęby?   <br> 
 				 -Tak, woreczek...                    
 			 </fieldset> 
 			<h2 ALIGN=center>Żart o informatyku</h2>
 			 <HR SIZE=6 WIDTH=40% ALIGN=CENTER NOSHADE COLOR=black>
 			 <fieldset> 
 				<legend>Przyszły informatyk</legend> 
-				 Dzieci piszą wypracowanie o tym, jak wyobażają sobie pracę informatyka.<br /> 
-				 Dlaczego tylko Karol. <br/>
-				 -Dlaczego nie piszesz? -pyta nauczycielka.<br/>
+				 Dzieci piszą wypracowanie o tym, jak wyobażają sobie pracę informatyka.<br> 
+				 Dlaczego tylko Karol. <br>
+				 -Dlaczego nie piszesz? -pyta nauczycielka.<br>
 				 -Czekam, aż mi się otworzy edytor tekstu.                     
 			 </fieldset>
 			<h3 ALIGN=right >Żart o więzieniu</h1>
 			 <fieldset> 
 				<legend>Więzień mówi do strażnika:</legend> 
-				 - Niech pan będzie dla mnie uprzejmy! <br /> 
+				 - Niech pan będzie dla mnie uprzejmy! <br> 
 				 Gdyby tu nie było takich jak ja, byłby pan bezrobotnym!
            		 </fieldset>
 			 <HR SIZE=10 WIDTH=30% ALIGN=RIGHT COLOR=green >
@@ -92,7 +92,7 @@
 				<li><u>Podkreślenie:</u>< u > < / u >
 			</ul>
 			<ul type=circle style="color: blue;">
-				<li><strike>Przekreślelie:</strike>< strike > < / strike >
+				<li><strike>Przekreślelie:</strike> < strike > < / strike >
 				<li>Indeks<sup>górny:</sup>< sup > < / sup >
 				<li>Indeks<sub>dolny:</sub>< sub > < / sub >
 			</ul>
