--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
   			</ol> 
 			
 
-			<img src="jojo.gif" align=right border="38" width="128" height="113" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=left border="21" width="111" height="108" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=right border="23" width="113" height="128" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=left border="18" width="108" height="111" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=right border="18" width="108" height="108" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=right border:38; width="128" height="113" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=left border:21; width="111" height="108" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=right border:23; width="113" height="128" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=left border:18; width="108" height="111" alt="grafika1-korotkov">
+			<img src="jojo.gif" align=right border:18; width="108" height="108" alt="grafika1-korotkov">
 			
 			<a id="koniec" href="poczta_korotkov.html">Link do poczty</a><br>
 			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
