--- a/tabela_korotkov.html
+++ b/tabela_korotkov.html
@@ -9,6 +9,39 @@
  	Tutaj będzie tabela
         <br>
 	<A HREF="index.html"> Tutaj jest link do strony głównej </A>
-
+        <table border=2> 
+        <caption>Dane języki programowania</caption> 
+        <thead> 
+        <tr> 
+                <th>Nazwa</th> 
+                <th>Rok</th> 
+                <th>Autor</th> 
+                <th>Zastosowanie</th> 
+                <th>Paradygma</th> 
+        </tr> 
+        </thead> 
+        <tbody> 
+        <tr> 
+                <td>Komórka 1</td> 
+                <td>Komórka 2</td> 
+                <td>Komórka 3</td> 
+                <td>Komórka 4</td> 
+                <td>Komórka 5</td> 
+        </tr> 
+        <tr> 
+                <td>Komórka 6</td> 
+                <td>Komórka 7</td> 
+                <td>Komórka 8</td> 
+                <td>Komórka 9</td> 
+                <td>Komórka 10</td> 
+        </tr> 
+        <tr> 
+                <td>Komórka 11</td> 
+                <td>Komórka 12</td> 
+                <td>Komórka 13</td> 
+                <td>Komórka 14</td> 
+                <td>Komórka 15</td> 
+        </tr> 
+        </tbody>
     </body> 
   </html> 
