--- a/index.html
+++ b/index.html
@@ -54,25 +54,31 @@
 			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a>
 			<br>			
 
-			<h1 ALIGN=left >Żart o lekarzu</h1> <!- Artem Korotkov 1P->
+			<h1 ALIGN=left >Żart o jedzeniu</h1> <!- Artem Korotkov 1P->
 			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
 			 <fieldset>
-				<legend>Dentysta sadysta</legend> 
-				 -Panie doktorze czy ma pan coś na moje zęby?   <br> 
-				 -Tak, woreczek...                    
+				<legend>Kostka lodu</legend>
+				<img src="ice.gif" align=right border="38" width="128" height="113" alt="grafika1-korotkov"> 
+				- Zosiu, co tak długo robisz w kuchni? <br>
+				- Wpadła mi kostka lodu do wrzątku i nie mogę jej znaleźć..<br>
+				<img src="ice.gif" align=left border="21" width="111" height="108" alt="grafika2-korotkov">
 			 </fieldset> 
-			<h2 ALIGN=center>Żart o informatyku</h2>
+			<h2 ALIGN=center>Żart o policjantach</h2>
 			 <HR SIZE=6 WIDTH=40% ALIGN=CENTER NOSHADE COLOR=black>
 			 <fieldset> 
-				<legend>Przyszły informatyk</legend> 
-				 Dzieci piszą wypracowanie o tym, jak wyobażają sobie pracę informatyka.<br> 
-				 Dlaczego tylko Karol. <br>
-				 -Dlaczego nie piszesz? -pyta nauczycielka.<br>
-				 -Czekam, aż mi się otworzy edytor tekstu.                     
+				<legend>Policjant w barze</legend>
+				<img src="police.gif" align=right border="23" width="113" height="128" alt="grafika3-korotkov">
+				Przychodzi policjant do baru i mowi: <br>
+				- Poprosze porcje frytek. <br>
+				Na to barman: <br>
+				- Nie mamy ziemniakow. <br>
+				- Nie szkodzi. Zjem z chlebem. <br>
+				<img src="police.gif" align=left border="18" width="108" height="111" alt="grafika4-korotkov">
 			 </fieldset>
 			<h3 ALIGN=right >Żart o więzieniu</h1>
 			 <fieldset> 
-				<legend>Więzień mówi do strażnika:</legend> 
+				<legend>Więzień mówi do strażnika:</legend>
+				<img src="wienzien.gif" align=right border="18" width="108" height="108" alt="grafika5-korotkov">
 				 - Niech pan będzie dla mnie uprzejmy! <br> 
 				 Gdyby tu nie było takich jak ja, byłby pan bezrobotnym!
            		 </fieldset>
@@ -184,11 +190,11 @@
   			</ol> 
 			
 
-			<img src="jojo.gif" align=right border="38" width="128" height="113" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=left border="21" width="111" height="108" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=right border="23" width="113" height="128" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=left border="18" width="108" height="111" alt="grafika1-korotkov">
-			<img src="jojo.gif" align=right border="18" width="108" height="108" alt="grafika1-korotkov">
+			
+			
+			
+			
+			
 			
 			<a id="koniec" href="poczta_korotkov.html">Link do poczty</a><br>
 			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
