--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html> 
     <html lang="pl-PL"> 
-    <html> 
      	      <head> 
-             	    <meta charset="utf-8">
-		    <meta http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-2" />  
+             	    <meta charset="utf-8">  
              	    <title>Artem Korotkov</title> 
      	      </head> 
     	      <body   bgcolor="silver">
@@ -54,7 +52,7 @@
 			<a href="formularz_korotkov.html">Link do strony zawierającej formularz</a>
 			<br>			
 
-			<h1 ALIGN=left >Żart o jedzeniu</h1> <!- Artem Korotkov 1P->
+			<h1 ALIGN=left >Żart o jedzeniu</h1> <!-- Artem Korotkov 1P -->
 			 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
 			 <fieldset>
 				<legend>Kostka lodu</legend>
@@ -75,7 +73,7 @@
 				- Nie szkodzi. Zjem z chlebem. <br>
 				<img src="police.gif" align=left border="18" width="108" height="111" alt="grafika4-korotkov">
 			 </fieldset>
-			<h3 ALIGN=right >Żart o więzieniu</h1>
+			<h3 ALIGN=right >Żart o więzieniu</h3>
 			 <fieldset> 
 				<legend>Więzień mówi do strażnika:</legend>
 				<img src="wienzien.gif" align=right border="18" width="108" height="108" alt="grafika5-korotkov">
@@ -93,18 +91,18 @@
             <h1> Ty zaproponuj swoje, związane z informatyką</h1>
 			<p style="color: blue;">Możliwości formatowania tekstu w HTML.</p>
 			<ul type=disc style="color: blue;">
-				<li><b>Pogrubienie:</b>< b > < / b >
-				<li><i>Kursywna:</i>< i > < / i >
-				<li><u>Podkreślenie:</u>< u > < / u >
+				<li><b>Pogrubienie:</b> &ltb> &lt/b>
+				<li><i>Kursywna:</i> &lti> &lt/i>
+				<li><u>Podkreślenie:</u> &ltu> &lt/u>
 			</ul>
 			<ul type=circle style="color: blue;">
-				<li><strike>Przekreślelie:</strike> < strike > < / strike >
-				<li>Indeks<sup>górny:</sup>< sup > < / sup >
-				<li>Indeks<sub>dolny:</sub>< sub > < / sub >
+				<li><strike>Przekreślelie:</strike> &ltstrike> &lt/strike>
+				<li>Indeks<sup>górny:</sup> &ltsup> &lt/sup>
+				<li>Indeks<sub>dolny:</sub> &ltsub> &lt/sub>
 			</ul>
 			<ul type=square style="color: blue;">
-				<li>Przejście do nowego wiersza w tekscie: < br >
-				<li>Zapobieganie automatycznemu przenoszeniu fragmentu tekstu do nowego wiersza: < nobr > < / nobr >
+				<li>Przejście do nowego wiersza w tekscie: &ltbr>
+				<li>Zapobieganie automatycznemu przenoszeniu fragmentu tekstu do nowego wiersza: &ltnobr> &lt/nobr>
 				<li>Spacja niełamliwa: & nbsp
 			</ul>
 
