--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
 			<h2> Ty zaproponuj swoje, związane z informatyką</h2>
 			<p style="color: red;">Nagłówki w treści strony WWW.</p>
 			<ol type="1" start="2" style="color: red;">
-				<li>< H1 > Będzie największym nagłówkiem.
-				<li>< H2 >...< H5 > Będzie coraz mniejsze.
-				<li>< H6 > Będzie największym nagłówkiem		
+				<li>&ltH1> Będzie największym nagłówkiem.
+				<li>&ltH2>...&ltH5> Będzie coraz mniejsze.
+				<li>&ltH6> Będzie największym nagłówkiem		
 			</ol>
 			<p style="color: red;">Możliwości funkcj font.</p>
 			<ol type="a" start="2" style="color: red;">
-				<li>< font size ="wielkość czcionki" >
-				<li>< font color ="kolor czcionki" >
-				<li>< font face ="rodzaj czcionki" >
+				<li>&ltfont size ="wielkość czcionki">
+				<li>&ltfont color ="kolor czcionki">
+				<li>&ltfont face ="rodzaj czcionki">
 			</ol>
 			<p style="color: red;">3 Najprostsze rodzaje kolorów do użycia w funkcji font.</p>
 			<ol type="I" start="2" style="color: red;">
