+tabela, fix title

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			Proces walidacji strony internetowej to systematyczne sprawdzanie zgodności kodu HTML, CSS i innych elementów witryny z obowiązującymi standardami. <br>
 			Walidator – program sprawdzający poprawność dokumentu o określonej składni.
 			<br>
+			<a href="walidacja_korotkov.html">Link do strony walidacja</a><br>
  	        Artem Korotkov
  			<p align="right"> <font color="green" size="1" face="Arial"> Artem </font> </p> <br>
 			<p align="right"> <font color="green" size="2" face="Arial"> Artem </font> </p> <br>
