--- a/poczta_korotkov.html
+++ b/poczta_korotkov.html
@@ -3,7 +3,7 @@
 <html> 
      <head> 
              <meta charset="utf-8"> 
-             <title>Tabela-Korotkov</title> 
+             <title>Poczta-Korotkov</title> 
      </head> 
     <body> 
  	Tutaj będzie poczta
