--- a/tabela_korotkov.html
+++ b/tabela_korotkov.html
@@ -6,42 +6,82 @@
              <title>Tabela-Korotkov</title> 
      </head> 
     <body> 
- 	Tutaj będzie tabela
-        <br>
-	<A HREF="index.html"> Tutaj jest link do strony głównej </A>
-        <table border=2> 
-        <caption>Dane języki programowania</caption> 
+        <A HREF="index.html"> Tutaj jest link do strony głównej </A> <br>
+	<table border=2 style="border: 2px solid #7119E1;" > 
+        <caption style="border: 2px solid #7119E1; padding: 5px; font-family:Arial;">Dane języki programowania</caption> 
         <thead> 
-        <tr> 
-                <th>Nazwa</th> 
-                <th>Rok</th> 
-                <th>Autor</th> 
-                <th>Zastosowanie</th> 
-                <th>Paradygma</th> 
+        <tr style="background-color:#36761F; color: white; font-family: Arial; text-align: center;"> 
+                <th style="padding: 10px;">Nazwa</th> 
+                <th style="padding: 10px;">Rok</th> 
+                <th style="padding: 10px;">Autor</th> 
+                <th style="padding: 10px;">Zastosowanie</th> 
+                <th style="padding: 10px;">Paradygma</th> 
         </tr> 
         </thead> 
         <tbody> 
-        <tr> 
-                <td>Komórka 1</td> 
-                <td>Komórka 2</td> 
-                <td>Komórka 3</td> 
-                <td>Komórka 4</td> 
-                <td>Komórka 5</td> 
+        <tr style="background-color: #92C47D;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">C</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1972</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Dennis Ritchie</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Systemy operacyjne</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Proceduralna</td> 
         </tr> 
-        <tr> 
-                <td>Komórka 6</td> 
-                <td>Komórka 7</td> 
-                <td>Komórka 8</td> 
-                <td>Komórka 9</td> 
-                <td>Komórka 10</td> 
+        <tr style="background-color: #92C47D;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">Go</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">2009</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Google</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Serwery, chmura</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Proceduralna</td> 
         </tr> 
-        <tr> 
-                <td>Komórka 11</td> 
-                <td>Komórka 12</td> 
-                <td>Komórka 13</td> 
-                <td>Komórka 14</td> 
-                <td>Komórka 15</td> 
+        <tr style="background-color: #92C47D;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">C++</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1985</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Dennis Ritchie</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Gry, grafika 3D</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Proceduralna</td> 
         </tr> 
+        <tr style="background-color: #79A5AE;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">Java</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1995</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Sun Microsystems</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Android, korporacyjne</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Obiektowa</td> 
+        </tr>
+        <tr style="background-color: #79A5AE;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">C#</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">2000</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Microsoft</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">.NET, Unity</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Obiektowa</td> 
+        </tr>
+        <tr style="background-color: #79A5AE;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">Swift</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">2014</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Apple</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">iOS, macOS</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Obiektowa</td> 
+        </tr>
+        <tr style="background-color: #6FA8DD;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">Python</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1991</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Guido van Rossum</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">AI, Web</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Skryptowa</td> 
+        </tr>
+        <tr style="background-color: #6FA8DD;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">JavaScript</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1995</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Brendan Eich</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Frontend, Node.js</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Skryptowa</td> 
+        </tr>
+        <tr style="background-color: #6FA8DD;"> 
+                <td style="color: #990000; font-family: Calibri; text-align: center; padding-left: 5px; padding-right: 5px;">PHP</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: right; padding-left: 5px; padding-right: 5px;">1995</td> 
+                <td style="color: #660000; font-family: Roboto; text-align: left; padding-left: 5px; padding-right: 5px;">Rasmus Lerdorf</td> 
+                <td style="color: #FFFF00; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Backend, CMS</td> 
+                <td style="color: #7119E1; font-family: Roboto; text-align: center; padding-left: 5px; padding-right: 5px;">Skryptowa</td> 
+        </tr>
         </tbody>
     </body> 
   </html> 
