--- a/poczta_korotkov.html
+++ b/poczta_korotkov.html
@@ -7,7 +7,7 @@
      </head> 
     <body> 
  	Tutaj będzie poczta
-	<A href ="mailto:atem.korotkov@ids.gda.pl"> <img src="poczta.gif" border=0 width=70 height=50> poczta do Twojego nauczyciela</A>
+	<A href ="mailto:artem.korotkov@ids.gda.pl"> <img src="poczta.gif" border=0 width=70 height=50> poczta do Twojego nauczyciela</A>
         <br>
         <A HREF="index.html"> Tutaj jest link do strony głównej </A>
     </body> 
