--- a/formularz_korotkov.html
+++ b/formularz_korotkov.html
@@ -5,9 +5,66 @@
              <meta charset="utf-8"> 
              <title>Formularz-Korotkov</title> 
      </head> 
-    <body> 
- 	Tutaj będzie formularz
-        <br>
-	<A HREF="index.html"> Tutaj jest link do strony głównej </A>
+    <body bgcolor="#6da2b8"> 
+ 	
+	
+
+        <center><h1> Formularz dotyczący warunków nauki i atmosfery w szkole</h1></center>
+
+        <form   action="mailto:tiomich227@gmail.com" >
+                <ol type="1">
+                        <li>            
+                                <h3>Jak oceniasz warunki nauki w Twojej szkole? </h3>
+                                <h4>
+                                        <input type="radio" name="bd" value="k"> Bardzo dobre <br> 
+                                        <input type="radio" name="d" value="d"> Dobre <br>
+                                        <input type="radio" name="p" value="p"> Przeciętne <br>
+                                        <input type="radio" name="z" value="z"> Złe <br>
+                                </h4>
+                        </li>
+                        <li>            
+                                <h3>Do jakiej szkoły uczęszczasz? </h3>
+                                <h4>
+                                        <input type="radio" name="p" value="p"> Podstawowa &nbsp&nbsp&nbsp
+                                        <input type="radio" name="b" value="b"> Branżowa <br> 
+                                        <input type="radio" name="s" value="s"> Średnia &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                        <input type="radio" name="w" value="w"> Wyższa <br>
+                                </h4>
+                        </li>
+                        <li>
+                                <h3>Jak oceniasz relacje?</h3>
+                                <h4>Między uczniamy: <input type="radio" name="bd" value="k"> Bardzo dobre
+                                                     <input type="radio" name="d" value="m"> Dobre
+                                                     <input type="radio" name="s" value="s"> Średnie
+                                                     <input type="radio" name="z" value="z"> Złe </h4>
+                                <h4>Między uczniamy a nuczycielami: <input type="radio" name="bd" value="k"> Bardzo dobre
+                                                     <input type="radio" name="d" value="m"> Dobre <br>
+                                                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                                     <input type="radio" name="s" value="s"> Średnie
+                                                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                                     <input type="radio" name="z" value="z"> Złe 
+                                </h4>  
+                                
+                        </li>
+                        <li>
+                                <h3>Jak oceniasz pracę nauczucieli i sposób prowadzenia lekcji?</h3>
+                                <h4>
+                                        <input type="radio" name="bd" value="k"> Bardzo dobre  
+                                        <input type="radio" name="d" value="d"> Dobre 
+                                        <input type="radio" name="p" value="p"> Przeciętne 
+                                        <input type="radio" name="z" value="s"> Słabu 
+                                </h4>
+                        </li>
+                        <li>
+                                <h3>Jakie masz uwagi lub propozycje dotyczące poprawy atmosfery w szkole?</h3>
+                                <h4>Uwagi: </h4>
+                                <textarea name="uwagi" placeholder="_" rows="3" cols="77"></textarea>
+                        </li>
+                </ol>
+        </form> 
+        <br><br>
+        <A HREF="index.html"> Tutaj jest link do strony głównej </A>
     </body> 
   </html> 
