--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
              	    <meta charset="utf-8">  
              	    <title>Artem Korotkov</title> 
      	      </head> 
-    	      <body   bgcolor="silver">
+    	      <body   bgcolor="#5aaedf">
 				
 			<a id="poczatek" href="poczta_korotkov.html">Link do poczty</a><br>
 			<a href="plik_korotkov.html">Link do ściągania pliku</a><br>
@@ -205,4 +205,5 @@
     </body> 
 
    </html> 
+
 
