--- a/formularz_korotkov.html
+++ b/formularz_korotkov.html
@@ -16,45 +16,45 @@
                         <li>            
                                 <h3>Jak oceniasz warunki nauki w Twojej szkole? </h3>
                                 <h4>
-                                        <input type="radio" name="bd" value="k"> Bardzo dobre <br> 
-                                        <input type="radio" name="d" value="d"> Dobre <br>
-                                        <input type="radio" name="p" value="p"> Przeciętne <br>
-                                        <input type="radio" name="z" value="z"> Złe <br>
+                                        <input type="radio" name="bd1" value="k"> Bardzo dobre <br> 
+                                        <input type="radio" name="d1" value="d"> Dobre <br>
+                                        <input type="radio" name="p1" value="p"> Przeciętne <br>
+                                        <input type="radio" name="z1" value="z"> Złe <br>
                                 </h4>
                         </li>
                         <li>            
                                 <h3>Do jakiej szkoły uczęszczasz? </h3>
                                 <h4>
-                                        <input type="radio" name="p" value="p"> Podstawowa &nbsp&nbsp&nbsp
-                                        <input type="radio" name="b" value="b"> Branżowa <br> 
-                                        <input type="radio" name="s" value="s"> Średnia &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                        <input type="radio" name="w" value="w"> Wyższa <br>
+                                        <input type="radio" name="p2" value="p"> Podstawowa &nbsp&nbsp&nbsp
+                                        <input type="radio" name="b2" value="b"> Branżowa <br> 
+                                        <input type="radio" name="s2" value="s"> Średnia &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                        <input type="radio" name="w2" value="w"> Wyższa <br>
                                 </h4>
                         </li>
                         <li>
                                 <h3>Jak oceniasz relacje?</h3>
-                                <h4>Między uczniamy: <input type="radio" name="bd" value="bd"> Bardzo dobre
-                                                     <input type="radio" name="d" value="d"> Dobre
-                                                     <input type="radio" name="s" value="s"> Średnie
-                                                     <input type="radio" name="z" value="z"> Złe </h4>
-                                <h4>Między uczniamy a nuczycielami: <input type="radio" name="bd" value="k"> Bardzo dobre
-                                                     <input type="radio" name="d" value="m"> Dobre <br>
+                                <h4>Między uczniamy: <input type="radio" name="bd3" value="bd"> Bardzo dobre
+                                                     <input type="radio" name="d3" value="d"> Dobre
+                                                     <input type="radio" name="s3" value="s"> Średnie
+                                                     <input type="radio" name="z3" value="z"> Złe </h4>
+                                <h4>Między uczniamy a nuczycielami: <input type="radio" name="bd4" value="k"> Bardzo dobre
+                                                     <input type="radio" name="d4" value="m"> Dobre <br>
                                                      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                                                      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                                                      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                                     <input type="radio" name="s" value="s"> Średnie
+                                                     <input type="radio" name="s4" value="s"> Średnie
                                                      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                                     <input type="radio" name="z" value="z"> Złe 
+                                                     <input type="radio" name="z4" value="z"> Złe 
                                 </h4>  
                                 
                         </li>
                         <li>
                                <h3>Jak oceniasz pracę nauczucieli i sposób prowadzenia lekcji?</h3>
                                 <select>
-                                        <option value="bd">Bardzo dobre</option>
-                                        <option value="d">Dobre</option>
-                                        <option value="p">Przeciętne</option>
-                                        <option value="s">Słabu</option>
+                                        <option value="bd5">Bardzo dobre</option>
+                                        <option value="d5">Dobre</option>
+                                        <option value="p5">Przeciętne</option>
+                                        <option value="s5">Słabu</option>
                                 </select>
                         </li>
                         <li>
